<resources>
    <string name="app_name">Health Bet</string>
    <string name="welcome_to_string_app_name">Welcome to @string/app_name</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Please wait</string>
    <string name="nav_header_subtitle">Loading your profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="try_again_internet">Please check your internet connection and try again!</string>
    <string name="title_activity_user_profile">User</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="FirebaseCollections">users</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="display_name">Display name</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="save_and_next">Save and Next</string>
    <string name="your_profile">Your Profile</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="body_status">Body Status</string>
    <string name="bmi">BMI</string>
    <string name="calculating">&#160;calculating&#160;</string>
    <string name="total_calories">Total calories</string>
    <string name="kcal_you_have_to_eat">kcal you have to eat</string>
    <string name="eaten_calories">Eaten calories</string>
    <string name="remaining_calories">Remaining calories</string>
    <string name="calories">Calories</string>
    <string name="amount">Amount</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="test">Test</string>
</resources>
